2014-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (get_server_groups): Call get_logon_server only for
	non-builtin accounts.
	* uinfo.cc (pwdgrp::fetch_account_from_windows): Check incoming
	account name for validity in terms of the current name prefixing rules
	and refuse invalid names.

2014-05-13  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::ioctl): Handle the different
	ideas of u_long between Winsock and Cygwin applications on x86_64.
	Add long comment.

2014-05-09  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* signal.cc (sigprocmask): Fix strace output to include "how".

	* fhandler_console.cc (dev_console::save_restore): Only save current
	dwEnd line rather than the one after that.

2014-05-08  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_user::init): Fix formatting in debug output.
	(struct cyg_USER_INFO_24): Define temporarily.  Explain why.
	(pwdgrp::fetch_account_from_windows): Handle sane primary group
	setting for Microsoft Accounts.  Explain why.
	* wincap.h (wincaps::has_microsoft_accounts): New element.
	* wincap.cc: Implement above element throughout.

2014-05-08  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (gr_ent::enumerate_caches): Fix copy/paste bug introducing
	an endless loop.

2014-05-07  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.cc (pwdgrp::parse_passwd): Fix an off by one computing the
	buffer len.  Add comment.
	* uinfo.cc (internal_getlogin): Fix typo in comment.

2014-05-07  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Tweak SID<->uid
	conversion to cover S-1-5-113, S-1-5-114, and S-1-5-1000 groups.

2014-05-07  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (pwdgrp::parse_group): Set grp.len.  Drop generating any
	gr_mem entries.
	(getgrgid_r): Don't try to copy gr_mem entries.  Always set gr_mem
	to an empty list.
	(getgrnam_r): Ditto.